------------
v3.0.0alpha4
------------




------------
v3.0.0alpha3
------------

|+

------------
v3.0.0alpha2
------------

|+

------------
v3.0.0alpha1
------------

|+

------
v2.0.7
------

[jan] Fix Trying to access array offset on value of type null (Remi Collet
      <remi@remirepo.net>, PR #1).


------
v2.0.6
------

[jan] Drop ereg_replace() usage (Remi Collet <fedora@famillecollet.com>).


------
v2.0.5
------

[jan] Mark PHP 7 as supported.


------
v2.0.4
------

[jan] Fix issues with certain locales like Turkish.


------
v2.0.3
------

[jan] Add Composer definition.


------
v2.0.2
------

[mjr] Fix several parsing bugs (Bug #12006).


------
v2.0.1
------

[mms] Use new Horde_Test layout.


------
v2.0.0
------

First stable release for Horde 5.


-----------
v2.0.0beta1
-----------

First beta release for Horde 5.


------------
v2.0.0alpha1
------------

First alpha release for Horde 5.


------
v1.0.2
------

[jan] Correctly parse "nacht" in German (Bug #10511).


------
v1.0.1
------

[jan] Fix tests to work with PHPUnit 3.6.


------
v1.0.0
------

First stable release for Horde 4.


---------
v1.0.0RC2
---------

Second release candidate for Horde 4.


---------
v1.0.0RC1
---------

First release candidate for Horde 4.


-----------
v1.0.0beta1
-----------

First beta release for Horde 4.


------------
v1.0.0alpha2
------------

Fix package layout.


------------
v1.0.0alpha1
------------

First alpha release for Horde 4.